--- a/app/index.html
+++ b/app/index.html
@@ -118,12 +118,14 @@
     <script src="scripts/controllers/places-controller.js"></script>
     <script src="scripts/controllers/provider/provider-main-controller.js"></script>
     <script src="scripts/controllers/courier/courier-order-show-controller.js"></script>
+    <script src="scripts/controllers/services/providers-controller.js"></script>
     <!-- services -->
     <script src="scripts/services/geolocation-service.js"></script>
     <script src="scripts/services/interceptors-service.js"></script>
     <script src="scripts/services/session-service.js"></script>
     <script src="scripts/services/native-session-service.js"></script>
     <script src="scripts/services/provider-service.js"></script>
+    <script src="scripts/services/providers-service.js"></script>
     <script src="scripts/services/airbrake-service.js"></script>
     <script src="scripts/services/products-service.js"></script>
     <script src="scripts/services/items-service.js"></script>
